fixing textarea scrollbar

--- a/aboutme/style2.scss
+++ b/aboutme/style2.scss
@@ -324,6 +324,7 @@ justify-content: center;
     margin: 30px auto;
   }
   textarea {
+    overflow-y: hidden;
     width: 400px;
     height: 30px;
     background: none;
